Code cleanup and release preparations